src/index.css
html {
  font-size: 62.5%;
}
body {
  font-size: 16px;
  line-height: 1.6;
  padding: 0;
  margin: 0;
  color: #191B40;
  font-family: cronos-pro, Georgia, serif;
  counter-reset: ref;
  counter-reset: ref-note;
}


h1, h2, h3 {
  font-family: rift, sans-serif;
  font-weight: bold;
  font-style: italic;
  max-width: 60rem;
  margin-left: auto;
  margin-right: auto;
}
h1, h2 {
  text-align: center;
}
h1 {
  color: black;
  font-size: 4em;
  animation: introduce 0.5s ease-out forwards;
}
h2 {
  color: #614ad3;
  font-size: 3em;
}

p, ul {
  max-width: 60rem;
  margin: 0 auto 1.5rem;
}
article {
  font-size: 1.8rem;
}

.intro::first-letter {
  color: #F2059F;
  float: left;
  font-family: donguri;
  font-size: 60px;
  line-height: 60px;
  padding-top: 4px;
  padding-right: 8px;
  padding-left: 3px;
}

.hero-image {
  width: 100%;
  text-align: center;
  margin: 3rem 0;
}
.chart {
  text-align: center;
  width: 100%;
  margin: 2rem 0;
  position: relative;
}
.chart svg {
  height: 60rem;
}
.clickable {
  cursor: pointer;
}
.milky-way-silhouette {
  position: absolute;
  z-index: -1;
  transform: translate(50px ,50px);
  opacity: 0.5;
  width: 800px;
  height: 500px;
}

figcaption {
  font-size: 1.4rem;
  font-style: italic;
  color: #614ad3;
}

.footer {
  color: #F2AE72;
  font-size: 1.6rem;
  background-color: #211C40;
  padding: 2rem 0;
  margin-top: 5rem;
}
.footnote-title {
  font-size: 2em;
  margin-top: 2em;
  margin-bottom: 0.5em;
}

a[href] {
  color: #f3826f;
  text-decoration: underline;
}
a[href]:visited, a.ref {
  text-decoration: none;
}

.ref::before {
  vertical-align: super;
  font-size: 0.8em;
  counter-increment: ref;
  content: "[" counter(ref) "] ";
}
.ref-note::before {
  counter-increment: ref-note;
  content: "[" counter(ref-note) "] ";
}

#infobox,
#tooltip {
  position: absolute;
  pointer-events: none;
  display: none;
  font-size: 1.4rem;
}
#infobox {
  padding: 1rem;
  overflow: hidden;
  background-color: whitesmoke;
}
#close-infobox {
  pointer-events: all;
  cursor: pointer;
  user-select: none;
  font-weight: bold;
  position: absolute;
  font-size: 2.2rem;
  line-height: 1;
  top: 0;
  left: 0;
  padding: 0.5rem 1rem;
}
.messier-data-grid {
  width: 30rem;
  display: grid;
  grid-template-rows: 12rem;
  grid-template-columns: 50% 50%;
  grid-auto-rows: auto;
  grid-gap: 1rem 0.5rem;
}
.messier-data-grid .image {
  grid-row: 1;
  grid-column: 1 / 3;
  text-align: center;
}
.messier-data-grid .label {
  text-transform: uppercase;
  letter-spacing: 0.1em;
  font-size: 1.2rem;
  line-height: 1.4;
}
.messier-data-grid .image img {
  width: 100%;
  height: 100%;
  object-fit: contain;
}
.messier-data-grid.comet-grid {
  grid-template-rows: 1rem;
}
#infobox .art-image {
  position: absolute;
  top: -1rem;
  left: -1rem;
  width: calc(100% + 2rem);
  height: calc(100% + 2rem);
  object-fit: cover;
  opacity: 0.3;
  filter: blur(10px);
}

#tooltip {
  background-color: #fffc;
  padding: 0 1rem;
}
#tooltip .object-name:empty {
  display: none;
}
#tooltip .object-name::before {
  content: "(";
}
#tooltip .object-name::after {
  content: ")";
}
#tooltip .object-type {
  font-style: italic;
}
#tooltip .cta {
  opacity: 0.6;
}

.comet-name {
  font-size: 1.2rem;
  fill: grey;
}
.legend-row {
  font-size: 1.2rem;
}
.chart-year {
  font-family: rift, sans-serif;
  text-anchor: end;
  font-size: 5rem;
  font-weight: bold;
  fill: #3e64ff;
}

#unlock-message {
  opacity: 0;
  transform: scale(0.5);
  transition: transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275), opacity 0.5s ease-out;
}
#unlock-message.show {
  opacity: 1;
  transform: scale(1);
}

.sat2x {
  filter: saturate(2);
}

@keyframes introduce {
  0% {
    letter-spacing: -0.3em;
    box-shadow: none;
  }
  50% {
    letter-spacing: normal;
    border-bottom: 0px solid black;
  }
  100% {
    border-bottom: 1px solid #090088;
    box-shadow:
      0 4px white,
      0 6px #930077,
      0 10px white,
      0 13px #e4007c,
      0 17px white,
      0 21px #ffbd39;
  }
}

